chore: 🔧 enable native esm modules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "strict": true,
     "declaration": true,
     "module": "NodeNext",
+    "moduleResolution": "nodenext",
     "esModuleInterop": true,
     "incremental": true,
     "outDir": "./dist"
