feat: ✨ add functionality to read config file
default options can be defined using config file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,9 @@
     "declaration": true,
     "module": "NodeNext",
     "moduleResolution": "nodenext",
+    "resolveJsonModule": false,
     "esModuleInterop": true,
-    "incremental": true,
+    "rootDir": "./src",
     "outDir": "./dist"
   },
   "include": ["src/**/*"]
