--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "publish": "pnpm tsc && pnpm publish"
   },
   "keywords": [
     "cli",
@@ -25,6 +26,7 @@
     "@types/node": "^18.15.11",
     "@types/prettier": "^2.7.2",
     "commander": "10",
+    "cosmiconfig": "^8.1.3",
     "typescript": "^5.0.4"
   }
 }
