--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^18.15.11",
     "@types/prettier": "^2.7.2",
     "commander": "10",
+    "commander-help": "^1.0.1",
     "cosmiconfig": "^8.1.3",
     "typescript": "^5.0.4"
   }
